# naryi-os

./: .gitignore  Dockerfile  README.md
naryi-os/: west.yml
naryi-os/app/: CMakeLists.txt  prj.conf
naryi-os/app/boards/: esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay
naryi-os/app/src/: main.c
naryi-os/app/src/modules/: CMakeLists.txt
naryi-os/app/src/modules/buttons/: CMakeLists.txt  buttons.c  buttons.h
naryi-os/app/src/modules/msg_bus/: CMakeLists.txt  msg_bus.c  msg_bus.h
naryi-os/app/src/modules/ui/: CMakeLists.txt  app.c  app.h  app_manager.c  app_manager.h  display_ctrl.c  display_ctrl.h  screen_api.c  screen_api.h  screen_manager.c  screen_manager.h  watchface.c  watchface.h
naryi-os/app/src/modules/ui/apps/: CMakeLists.txt  music_app.c  music_app.h  settings_app.c  settings_app.h  watchface.c  watchface.h  watchface_app.c  watchface_app.h
naryi-os/app/src/modules/ui/assets/fonts/: obitron_47.c
naryi-os/app/src/modules/ui/assets/images/: wavy_bg.c
scripts/: container-entrypoint.sh  install-zephyr.sh
